# crewai_DataInsightAnalysis

./: .env.example  README.md  pyproject.toml  test.py  training_data.pkl
src/data_insight_analysis/: crew.py  main.py
src/data_insight_analysis/llm/: llms.py
