[project]
name = "data_insight_analysis"
version = "0.1.0"
description = "Data_Insight_Analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "icecream>=2.1.4",
    "langchain-together>=0.2.0",
    "requests>=2.32.3",
]

[project.scripts]
data_insight_analysis = "data_insight_analysis.main:run"
run_crew = "data_insight_analysis.main:run"
train = "data_insight_analysis.main:train"
replay = "data_insight_analysis.main:replay"
test = "data_insight_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
